--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -950,6 +950,11 @@
   
   .sectionFooter {
     margin-top: 40px;
+    text-align: center;
+  }
+  
+  .sectionFooter a {
+    display: inline-block;
   }
   
   .trust {
@@ -989,6 +994,11 @@
   .trustLogos img:hover {
     filter: grayscale(0%);
     transform: scale(1.1);
+  }
+  
+  .trust a {
+    display: inline-block;
+    margin-top: 40px;
   }
   
   @media (max-width: 1024px) {
